
file(GLOB_RECURSE my_lib_src "./src/*.cpp")
foreach(source ${my_lib_src})
    message(STATUS "Found source file: ${source}")
endforeach()
add_subdirectory(fmt EXCLUDE_FROM_ALL)
add_subdirectory(json)
add_library(my_lib STATIC ${my_lib_src})
target_link_libraries(my_lib PUBLIC fmt::fmt)
target_link_libraries(my_lib PUBLIC json_lib)
target_include_directories(my_lib PUBLIC ./include)